--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,7 +30,7 @@ a:hover {
 footer {
   width: 100%;
   height: 60px;
-  position: absolute;
+  /*position: absolute;*/
   bottom: 0;    
   background-color: #f2f0eb;
 }
@@ -123,6 +123,21 @@ footer {
  
  .samuraitravel-search-form {
      max-width: 300px;
+ }
+ 
+ #reviewList {
+ 	 display: flex;
+ 	 flex-wrap: wrap;
+	 gap: 16px;
+ }
+				
+ .review-card {
+	 border: 1px solid #ccc;
+	 border-radius: 8px;
+	 padding: 16px;
+	 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	 width: 200px;
+	 background-color: #fff;
  }
 
 @media screen and (min-width: 1400px) {
