--- a/src/main/resources/templates/houses/show.html
+++ b/src/main/resources/templates/houses/show.html
@@ -462,15 +462,15 @@
 													<option value="5">★★★★★</option>
 												</select>
 											</div>
+									<!-- </div> -->
+									<!-- <div class="modal-footer"> -->
+											<button type="submit" class="btn btn-primary" id="saveChanges">
+												保存
+											</button>
+											<button type="button" class="btn btn-secondary" data-dismiss="modal">
+												閉じる
+											</button>
 										</form>
-									</div>
-									<div class="modal-footer">
-										<button type="submit" class="btn btn-primary" id="saveChanges">
-											保存
-										</button>
-										<button type="button" class="btn btn-secondary" data-dismiss="modal">
-											閉じる
-										</button>
 									</div>
 								</div>
 							</div>
