--- a/src/main/resources/templates/houses/show.html
+++ b/src/main/resources/templates/houses/show.html
@@ -414,7 +414,7 @@
 										本当にこのレビューを削除しますか？
 									</div>
 									<div class="modal-footer">
-										<form method="post" action="#" th:action="@{/houses/__${house.getId()}__/review/__${currentUserId}__/edit}">
+										<form method="post" th:action="@{/houses/__${house.getId()}__/review/__${currentUserId}__/delete}">
 											<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 											<button type="button" class="btn btn-secondary" data-dismiss="modal">
 												キャンセル
@@ -422,6 +422,7 @@
 											<button type="submit" class="btn btn-danger" id="confirmDelete" value="delete">
 												削除
 											</button>
+										</form>
 									</div>
 								</div>
 							</div>
