--- a/src/main/resources/templates/houses/show.html
+++ b/src/main/resources/templates/houses/show.html
@@ -33,6 +33,10 @@
 		</div>
 		
 		<main>
+			<div th:if="${successMessage}" class="alert alert-info">
+             	<span th:text="${successMessage}">
+				</span>
+            </div>  
 			<div class="container pt-4 pb-5 samuraitravel-container">
 				<div class="row justify-content-center">
 					<div class="col-xxl-9 col-xl-10 col-lg-11">
